--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,7 +11,6 @@
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
-  --animate-aurora: aurora 60s linear infinite;
 }
 
 @keyframes aurora {
@@ -21,6 +20,10 @@
   to {
     background-position: 350% 50%, 350% 50%;
   }
+}
+
+.animate-aurora {
+  animation: aurora 60s linear infinite !important;
 }
 
 @media (prefers-color-scheme: dark) {
